// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body1 detailVariant 1`] = `
<section
  className="NatDSIntro-root-96"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-98 NatDSIntro-introTitle-99 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-97 MuiTypography-body1 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body1 titleVariant 1`] = `
<section
  className="NatDSIntro-root-92"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-94 NatDSIntro-introTitle-95 MuiTypography-body1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body2 detailVariant 1`] = `
<section
  className="NatDSIntro-root-104"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-106 NatDSIntro-introTitle-107 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-105 MuiTypography-body2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with body2 titleVariant 1`] = `
<section
  className="NatDSIntro-root-100"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-102 NatDSIntro-introTitle-103 MuiTypography-body2 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with button detailVariant 1`] = `
<section
  className="NatDSIntro-root-120"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-122 NatDSIntro-introTitle-123 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-121 MuiTypography-button MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with button titleVariant 1`] = `
<section
  className="NatDSIntro-root-116"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-118 NatDSIntro-introTitle-119 MuiTypography-button MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with caption detailVariant 1`] = `
<section
  className="NatDSIntro-root-112"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-114 NatDSIntro-introTitle-115 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-113 MuiTypography-caption MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with caption titleVariant 1`] = `
<section
  className="NatDSIntro-root-108"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-110 NatDSIntro-introTitle-111 MuiTypography-caption MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with error detailColor 1`] = `
<section
  className="NatDSIntro-root-192"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-194 NatDSIntro-introTitle-195 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-193 MuiTypography-body2 MuiTypography-colorError"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with error titleColor 1`] = `
<section
  className="NatDSIntro-root-188"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-190 NatDSIntro-introTitle-191 MuiTypography-subtitle1 MuiTypography-colorError"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h1 detailVariant 1`] = `
<section
  className="NatDSIntro-root-32"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-34 NatDSIntro-introTitle-35 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-33 MuiTypography-h1 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h1 titleVariant 1`] = `
<section
  className="NatDSIntro-root-28"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-30 NatDSIntro-introTitle-31 MuiTypography-h1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h2 detailVariant 1`] = `
<section
  className="NatDSIntro-root-40"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-42 NatDSIntro-introTitle-43 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-41 MuiTypography-h2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h2 titleVariant 1`] = `
<section
  className="NatDSIntro-root-36"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-38 NatDSIntro-introTitle-39 MuiTypography-h2 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h3 detailVariant 1`] = `
<section
  className="NatDSIntro-root-48"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-50 NatDSIntro-introTitle-51 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-49 MuiTypography-h3 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h3 titleVariant 1`] = `
<section
  className="NatDSIntro-root-44"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-46 NatDSIntro-introTitle-47 MuiTypography-h3 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h4 detailVariant 1`] = `
<section
  className="NatDSIntro-root-56"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-58 NatDSIntro-introTitle-59 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-57 MuiTypography-h4 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h4 titleVariant 1`] = `
<section
  className="NatDSIntro-root-52"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-54 NatDSIntro-introTitle-55 MuiTypography-h4 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h5 detailVariant 1`] = `
<section
  className="NatDSIntro-root-64"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-66 NatDSIntro-introTitle-67 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-65 MuiTypography-h5 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h5 titleVariant 1`] = `
<section
  className="NatDSIntro-root-60"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-62 NatDSIntro-introTitle-63 MuiTypography-h5 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h6 detailVariant 1`] = `
<section
  className="NatDSIntro-root-72"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-74 NatDSIntro-introTitle-75 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-73 MuiTypography-h6 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with h6 titleVariant 1`] = `
<section
  className="NatDSIntro-root-68"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-70 NatDSIntro-introTitle-71 MuiTypography-h6 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit detailColor 1`] = `
<section
  className="NatDSIntro-root-152"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-154 NatDSIntro-introTitle-155 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-153 MuiTypography-body2 MuiTypography-colorInherit"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit detailVariant 1`] = `
<section
  className="NatDSIntro-root-136"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-138 NatDSIntro-introTitle-139 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-137 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit titleColor 1`] = `
<section
  className="NatDSIntro-root-148"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-150 NatDSIntro-introTitle-151 MuiTypography-subtitle1 MuiTypography-colorInherit"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with inherit titleVariant 1`] = `
<section
  className="NatDSIntro-root-132"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-134 NatDSIntro-introTitle-135 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with initial detailColor 1`] = `
<section
  className="NatDSIntro-root-144"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-146 NatDSIntro-introTitle-147 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-145 MuiTypography-body2"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with initial titleColor 1`] = `
<section
  className="NatDSIntro-root-140"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-142 NatDSIntro-introTitle-143 MuiTypography-subtitle1"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with overline detailVariant 1`] = `
<section
  className="NatDSIntro-root-128"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-130 NatDSIntro-introTitle-131 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-129 MuiTypography-overline MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with overline titleVariant 1`] = `
<section
  className="NatDSIntro-root-124"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-126 NatDSIntro-introTitle-127 MuiTypography-overline MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with primary detailColor 1`] = `
<section
  className="NatDSIntro-root-160"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-162 NatDSIntro-introTitle-163 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-161 MuiTypography-body2 MuiTypography-colorPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with primary titleColor 1`] = `
<section
  className="NatDSIntro-root-156"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-158 NatDSIntro-introTitle-159 MuiTypography-subtitle1 MuiTypography-colorPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with secondary detailColor 1`] = `
<section
  className="NatDSIntro-root-168"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-170 NatDSIntro-introTitle-171 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-169 MuiTypography-body2 MuiTypography-colorSecondary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with secondary titleColor 1`] = `
<section
  className="NatDSIntro-root-164"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-166 NatDSIntro-introTitle-167 MuiTypography-subtitle1 MuiTypography-colorSecondary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle1 detailVariant 1`] = `
<section
  className="NatDSIntro-root-80"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-82 NatDSIntro-introTitle-83 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-81 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle1 titleVariant 1`] = `
<section
  className="NatDSIntro-root-76"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-78 NatDSIntro-introTitle-79 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle2 detailVariant 1`] = `
<section
  className="NatDSIntro-root-88"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-90 NatDSIntro-introTitle-91 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-89 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with subtitle2 titleVariant 1`] = `
<section
  className="NatDSIntro-root-84"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-86 NatDSIntro-introTitle-87 MuiTypography-subtitle2 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textPrimary detailColor 1`] = `
<section
  className="NatDSIntro-root-176"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-178 NatDSIntro-introTitle-179 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-177 MuiTypography-body2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textPrimary titleColor 1`] = `
<section
  className="NatDSIntro-root-172"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-174 NatDSIntro-introTitle-175 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textSecondary detailColor 1`] = `
<section
  className="NatDSIntro-root-184"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-186 NatDSIntro-introTitle-187 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-185 MuiTypography-body2 MuiTypography-colorTextSecondary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Any valid Intro with textSecondary titleColor 1`] = `
<section
  className="NatDSIntro-root-180"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-182 NatDSIntro-introTitle-183 MuiTypography-subtitle1 MuiTypography-colorTextSecondary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and detail 1`] = `
<section
  className="NatDSIntro-root-10"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-12 NatDSIntro-introTitle-13 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
  <p
    className="MuiTypography-root NatDSIntro-introDetail-11 MuiTypography-body2 MuiTypography-colorTextPrimary"
  >
    detail
  </p>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and icon 1`] = `
<section
  className="NatDSIntro-root-14"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-16 NatDSIntro-introTitle-17 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    <i
      aria-hidden={true}
      className="material-icons MuiIcon-root natds-icons natds-icons-filled-action-add NatDSIcon-root-18 NatDSIcon-root-19"
    >
      filled-action-add
    </i>
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided should match snapshot - Intro with title and without detail 1`] = `
<section
  className="NatDSIntro-root-6"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-8 NatDSIntro-introTitle-9 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided when an invalid titleVariant property is provided should match snapshot 1`] = `
<section
  className="NatDSIntro-root-24"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-26 NatDSIntro-introTitle-27 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when a theme is explicitly provided when titleVariant property is undefined should match snapshot 1`] = `
<section
  className="NatDSIntro-root-20"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-22 NatDSIntro-introTitle-23 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when no theme is explicitly provided and titleVariant property is undefined should match snapshot 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-4 MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;

exports[`Intro component when no theme is explicitly provided when an invalid titleVariant property is provided should match snapshot 1`] = `
<section
  className="NatDSIntro-root-1"
>
  <h3
    className="MuiTypography-root NatDSIntro-introTitle-3 NatDSIntro-introTitle-5 MuiTypography-colorTextPrimary"
  >
    Test title
  </h3>
</section>
`;
